<resources>
    <string name="app_name">Playlist maker</string>
    <string name="button_search">Поиск</string>
    <string name="button_media">Медиатека</string>
    <string name="button_settings">Настройки</string>
    <string name="theme">Темная тема</string>
    <string name="share">Поделиться приложением</string>
    <string name="support">Написать в поддержку</string>
    <string name="policy">Пользовательское соглашение</string>
    <string name="share_text">https://practicum.yandex.ru/learn/android-developer/</string>
    <string name="email">spiridonovdavid@gmail.com</string>
    <string name="email_subject">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="email_text">Спасибо разработчикам и разработчицам за крутое приложение!</string>
    <string name="policy_text">https://yandex.ru/legal/practicum_offer/</string>
    <string name="error_not_found">Ничего не нашлось</string>
    <string name="error_internet">Проблемы со связью\n\n Загрузка не удалась. Проверьте подключение к интернету</string>
    <string name="button_update">Обновить</string>
    <string name="history_text">Вы искали</string>
    <string name="clear_history">Очистить историю</string>
    <string name="albumcover_desc">Обложка альбома</string>
    <string name="duration_label">Длительность</string>
    <string name="album_label">Альбом</string>
    <string name="year_label">Год</string>
    <string name="genre_label">Жанр</string>
    <string name="country_label">Страна</string>
    <string name="nopreivewurl">Ошибка, не найдена ссылка на трек</string>
    <string name="empty_favorite">Ваша медиатека пуста</string>
    <string name="empty_playlist">Вы не создали\nни одного плейлиста</string>
    <string name="new_playlist">Новый плейлист</string>
    <string name="favorite">Избранные треки</string>
    <string name="playlist">Плейлисты</string>
    <string name="text_share">Поделиться через</string>

    <string name="new_playlist_btn">Новый плейлист</string>
    <string name="create_btn">Создать</string><string name="field_title">Название*</string>
    <string name="description_title">Описание</string>
    <string name="add_to_playlist">Добавить в плейлист</string>
    <string name="close_playlist_dialog_title">Завершить создание плейлиста?</string>
    <string name="close_playlist_dialog_message">Все несохраненные данные будут потеряны</string>
    <string name="cancel">Отмена</string>
    <string name="finish">Завершить</string>
    <string name="title_dialog">Завершить создание плейлиста?</string>
    <string name="message_dialog">Все несохраненные данные будут потеряны</string>
    <string name="cancel_dialog">Отмена</string>
    <string name="ok_dialog">Завершить</string>
    <string name="album_image_text">Обложка альбома</string>
    <string name="duration">Длительность</string>
    <string name="country">Страна</string>
    <string name="genre">Жанр</string>
    <string name="year">Год</string>
    <string name="album">Альбом</string>
    <string name="error_not_picked">Ничего не выбрано</string>
    <plurals name="tracks_plurals">
        <item quantity="zero">%1$d треков</item>
        <item quantity="one">%1$d трек</item>
        <item quantity="two">%1$d трека</item>
        <item quantity="few">%1$d трека</item>
        <item quantity="many">%1$d треков</item>
        <item quantity="other">%1$d треков</item>
    </plurals>


</resources>
