<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    style="@style/MainLayout"
    >

    <TextView
        android:text="@string/app_name"
        style="@style/MainText"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <Button
            android:id="@+id/button_search"
            style="@style/ButtonMain"
            android:text="@string/button_search"
            app:icon="@drawable/search"
            android:insetTop="14dp"
            />

        <Button
            android:id="@+id/button_media"
            style="@style/ButtonMain"
            android:text="@string/button_media"
            app:icon="@drawable/media" />

        <Button
            android:id="@+id/button_settings"
            android:text="@string/button_settings"
            app:icon="@drawable/settings"
            style="@style/ButtonMain"
            />
    </LinearLayout>

</LinearLayout>