<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/RootLayout">

    <LinearLayout
        android:layout_height="56dp"
        android:layout_width="match_parent"
        android:gravity="center">

        <TextView
            style="@style/SettingsHeader"
            android:text="@string/button_settings"/>

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="@dimen/dp_24">

        <LinearLayout
            style="@style/SettingsItem">
            <com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/switchtheme"
                style="@style/SettingsItemText"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                app:trackTint="@color/switch_one"
                app:thumbTint="@color/switch_two"
                app:switchMinWidth="55dp"
                android:text="@string/theme" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/share_btn"
            style="@style/SettingsItem">

            <TextView
                style="@style/SettingsItemText"
                android:text="@string/share"/>

            <ImageView
                style="@style/WrapContent"
                app:srcCompat="@drawable/share"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/support_btn"
            style="@style/SettingsItem">

            <TextView
                style="@style/SettingsItemText"
                android:text="@string/support"/>

            <ImageView
                style="@style/WrapContent"
                app:srcCompat="@drawable/support"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/policy_btn"
            style="@style/SettingsItem">
            <TextView
                style="@style/SettingsItemText"
                android:text="@string/policy"/>
            <ImageView
                style="@style/WrapContent"
                app:srcCompat="@drawable/policy"
                android:paddingHorizontal="6dp"/>
        </LinearLayout>

    </LinearLayout>
</LinearLayout>