<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    style="@style/ActivityLayout">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="24dp"
        android:paddingVertical="16dp"
        tools:context=".presentation.activities.MainActivity">

        <ImageView
            android:id="@+id/back"
            android:layout_width="@dimen/dp_24"
            android:layout_height="@dimen/dp_24"
            android:layout_marginEnd="12dp"
            android:background="@drawable/arrow_back"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            />

        <ImageView
            android:id="@+id/albumCover"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:contentDescription="@string/albumcover_desc"
            android:scaleType="centerCrop"
            android:layout_marginTop="32dp"
            android:src="@drawable/placeholderplayer"
            app:layout_constraintTop_toBottomOf="@id/back"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintDimensionRatio="1:1" />

        <TextView
            android:id="@+id/songTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/playerTrackName"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@id/albumCover"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/artist"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/playerAuthorName"
            android:layout_marginTop="12dp"
            app:layout_constraintTop_toBottomOf="@id/songTitle"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <ImageButton
            android:id="@+id/addToPlaylistButton"
            android:layout_width="51dp"
            android:layout_height="51dp"
            android:layout_marginTop="16dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:src="@drawable/addbutton"
            app:layout_constraintEnd_toStartOf="@+id/playButton"
            app:layout_constraintHorizontal_chainStyle="spread_inside"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/playButton" />

        <ImageButton
            android:id="@+id/playButton"
            android:layout_width="84dp"
            android:layout_height="84dp"
            android:layout_marginTop="28dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:src="@drawable/playbutton"
            app:layout_constraintTop_toBottomOf="@id/artist"
            app:layout_constraintStart_toEndOf="@id/addToPlaylistButton"
            app:layout_constraintEnd_toStartOf="@+id/likeButton"/>

        <ImageButton
            android:id="@+id/likeButton"
            android:layout_width="51dp"
            android:layout_height="51dp"
            android:layout_marginTop="16dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:src="@drawable/likebutton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_chainStyle="spread_inside"
            app:layout_constraintStart_toEndOf="@id/playButton"
            app:layout_constraintTop_toTopOf="@id/playButton" />

        <TextView
            android:id="@+id/durationPlaying"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:textSize="@dimen/sp_14"
            android:textColor="@color/textblacktowhite"
            app:layout_constraintTop_toBottomOf="@id/playButton"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="16dp" />

        <TextView
            android:id="@+id/durationLabel"
            android:layout_width="wrap_content"
            android:layout_height="32dp"
            android:layout_marginTop="30dp"
            android:gravity="center_vertical"
            android:text="@string/duration_label"
            style="@style/labelStyle"
            app:layout_constraintTop_toBottomOf="@id/durationPlaying"
            app:layout_constraintStart_toStartOf="parent"/>

        <TextView
            android:id="@+id/durationValue"
            android:layout_width="wrap_content"
            android:layout_height="32dp"
            android:layout_marginTop="30dp"
            android:gravity="center_vertical"
            style="@style/labelValue"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1"
            app:layout_constraintStart_toEndOf="@id/durationLabel"
            app:layout_constraintTop_toBottomOf="@id/durationPlaying" />



        <TextView
            android:id="@+id/albumLabel"
            android:layout_width="wrap_content"
            android:layout_height="32dp"
            android:gravity="center_vertical"
            android:text="@string/album_label"
            style="@style/labelStyle"
            app:layout_constraintTop_toBottomOf="@id/durationLabel"
            app:layout_constraintStart_toStartOf="parent"/>

        <TextView
            android:id="@+id/albumValue"
            android:layout_width="0dp"
            android:layout_height="32dp"
            android:gravity="center_vertical"
            style="@style/labelValue"
            android:ellipsize="end"
            android:maxLines="1"
            android:singleLine="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1"
            app:layout_constraintStart_toEndOf="@id/albumLabel"
            app:layout_constraintWidth_default="wrap"
            android:layout_marginStart="8dp"
            app:layout_constraintTop_toBottomOf="@id/durationValue" />


        <TextView
            android:id="@+id/yearLabel"
            android:layout_width="wrap_content"
            android:layout_height="32dp"
            android:gravity="center_vertical"
            android:text="@string/year_label"
            style="@style/labelStyle"
            app:layout_constraintTop_toBottomOf="@id/albumLabel"
            app:layout_constraintStart_toStartOf="parent"/>

        <TextView
            android:id="@+id/yearValue"
            android:layout_width="wrap_content"
            android:layout_height="32dp"
            android:gravity="center_vertical"
            style="@style/labelValue"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1"
            app:layout_constraintStart_toEndOf="@id/yearLabel"
            app:layout_constraintTop_toBottomOf="@id/albumValue" />

        <TextView
            android:id="@+id/genreLabel"
            android:layout_width="wrap_content"
            android:layout_height="32dp"
            android:gravity="center_vertical"
            android:text="@string/genre_label"
            style="@style/labelStyle"
            app:layout_constraintTop_toBottomOf="@id/yearLabel"
            app:layout_constraintStart_toStartOf="parent"/>

        <TextView
            android:id="@+id/genreValue"
            android:layout_width="wrap_content"
            android:layout_height="32dp"
            android:gravity="center_vertical"
            style="@style/labelValue"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1"
            app:layout_constraintStart_toEndOf="@id/yearLabel"
            app:layout_constraintTop_toBottomOf="@id/yearValue" />

        <TextView
            android:id="@+id/countryLabel"
            android:layout_width="wrap_content"
            android:layout_height="32dp"
            android:gravity="center_vertical"
            android:text="@string/country_label"
            style="@style/labelStyle"
            app:layout_constraintTop_toBottomOf="@id/genreLabel"
            app:layout_constraintStart_toStartOf="parent"/>

        <TextView
            android:id="@+id/countryValue"
            android:layout_width="wrap_content"
            android:layout_height="32dp"
            android:gravity="center_vertical"
            style="@style/labelValue"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1"
            app:layout_constraintStart_toEndOf="@id/genreLabel"
            app:layout_constraintTop_toBottomOf="@id/genreValue" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>
