<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    xmlns:app="http://schemas.android.com/apk/res-auto">
    <LinearLayout
        android:id="@+id/topPanel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        android:orientation="horizontal">
        <LinearLayout
            android:layout_height="56dp"
            android:layout_width="match_parent"
            android:paddingHorizontal="@dimen/dp_24"
            android:paddingVertical="16dp"
            android:gravity="center">
            <ImageView
                android:id="@+id/back"
                android:layout_width="@dimen/dp_24"
                android:layout_height="@dimen/dp_24"
                android:layout_marginEnd="12dp"
                android:background="@drawable/arrow_back"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                />
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/new_playlist_btn"
                android:paddingStart="12dp"
                style="@style/Title"
                />

        </LinearLayout>

    </LinearLayout>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/add_image_playlist"
        app:layout_constraintTop_toTopOf="@id/playlistCover"
        app:layout_constraintBottom_toBottomOf="@id/playlistCover"
        app:layout_constraintStart_toStartOf="@id/playlistCover"
        app:layout_constraintEnd_toEndOf="@id/playlistCover"/>

    <ImageView
        android:id="@+id/playlistCover"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:layout_marginTop="26dp"
        app:layout_constraintHeight_percent="0.40"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintTop_toBottomOf="@id/topPanel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/playlistTitle"
        android:adjustViewBounds="true"
        android:background="@drawable/playlist_cover_frame"/>

    <TextView
        android:id="@+id/createButton"
        android:layout_width="0dp"
        android:layout_height="44dp"
        android:layout_marginStart="17dp"
        android:layout_marginEnd="17dp"
        android:layout_marginBottom="32dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@drawable/create_playlist_button"
        android:text="@string/create_btn"
        android:gravity="center"
        android:foreground="?attr/selectableItemBackground"
        style="@style/CreatePlaylistButton"
        />

    <EditText
        android:id="@+id/playlistTitle"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="33dp"
        app:layout_constraintTop_toBottomOf="@id/playlistCover"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/playlistDescription"
        android:background="@drawable/edit_text_field"
        android:hint="@string/field_title"
        android:paddingStart="16dp"
        android:fontFamily="@font/ys_display_regular"
        android:textSize="16sp"
        style="@style/NewPlaylistField"/>
    <TextView
        android:id="@+id/playlistTitleTopHint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/playlistTitle"
        app:layout_constraintTop_toTopOf="@id/playlistTitle"
        app:layout_constraintBottom_toTopOf="@id/playlistTitle"
        android:layout_marginStart="16dp"
        android:paddingStart="4dp"
        android:paddingEnd="4dp"
        android:text="@string/field_title"
        android:textColor="@color/text_field_blue"
        style="@style/NewPlaylistHint"
        />

    <EditText
        android:id="@+id/playlistDescription"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/playlistTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@drawable/edit_text_field"
        android:hint="@string/description_title"
        android:paddingStart="16dp"
        android:fontFamily="@font/ys_display_regular"
        android:textSize="16sp"
        style="@style/NewPlaylistField"/>

    <TextView
        android:id="@+id/playlistDescriptionTopHint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/playlistDescription"
        app:layout_constraintTop_toTopOf="@id/playlistDescription"
        app:layout_constraintBottom_toTopOf="@id/playlistDescription"
        android:layout_marginStart="16dp"
        android:paddingStart="4dp"
        android:paddingEnd="4dp"
        android:text="@string/description_title"
        android:textColor="@color/text_field_blue"
        style="@style/NewPlaylistHint"
        />

</androidx.constraintlayout.widget.ConstraintLayout>